Fix navbar z-index

--- a/_sass/components/navbar.scss
+++ b/_sass/components/navbar.scss
@@ -8,7 +8,8 @@
 
   position: fixed;
   top: 0;
-  
+  z-index: 1;
+
   ul { 
     margin: 0;
     padding: 0;
